# rapidwebs-agent

./: .gitignore  .qwenignore  CHANGELOG.md  CLI_ENHANCEMENTS.md  CODE_OF_CONDUCT.md  CODE_QUALITY_AUDIT.md  CONTRIBUTING.md  QWEN.COMPACT.md  QWEN.md  README.md  SETUP.md  pyproject.toml  test_subagent_fixes.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml
.qwen/: optimizer-config.json  settings.json  settings.json.bak
.qwen/skills/security-review/: SKILL.md  examples.md  reference.md
agent/: __init__.py  agent.py  approval_workflow.py  code_analysis_tools.py  code_parser.py  config.py  config_layers.py  configuration_wizard.py  context_manager.py  llm_models.py  logging_config.py  output_manager.py  project_detector.py  skills_manager.py  streaming_renderer.py  temp_manager.py  tool_registry.py  ui_components.py  user_interface.py  utilities.py
agent/caching/: __init__.py  change_detector.py  content_addressable.py  integration.py  lazy_loader.py  response_cache.py  token_budget.py
agent/skills/: __init__.py  git_skill.py  memory_skill.py  todo_skill.py
agent/subagents/: __init__.py  code_agent.py  docs_agent.py  orchestrator.py  prompts.py  protocol.py  research_agent.py  security_agent.py  test_agent.py
docs/: AGENTIC_LOOP_COMPARISON.md  BUG_ANALYSIS.md  CODE_TOOLS_GUIDE.md  CONVERSATION_MANAGEMENT_IMPLEMENTATION.md  FEATURE_ROADMAP_2026.md  FILE_IGNORE_AND_SECURITY.md  MCP_SERVERS_GUIDE.md  MEMORY_AND_PROJECT_DETECTION.md  MIGRATION_GUIDE.md  NEW_SUBAGENTS_FEATURES.md  PHASE_2_IMPLEMENTATION.md  QWEN_CODE_ARCHITECTURE_ANALYSIS.md  QWEN_CODE_ARCHITECTURE_COMPARISON.md  SKILLS_SYSTEM_GUIDE.md  SPECIALIZED_COMPONENTS_ANALYSIS.md  SUBAGENTS_ARCHITECTURE.md  TODO_AND_OUTPUT_ANALYSIS.md  TOKEN_BUDGET_GUIDE.md  TUI_GAP_ANALYSIS.md  WEB_FETCH_ARCHITECTURE.md  WEEK_1_IMPLEMENTATION_PLAN.md
hooks/: AUTO-OPT-README.md  README.md  pre-commit-opt.bat  pre-commit-opt.sh  pre-commit.bat  pre-commit.sh
rapidwebs_agent/: __init__.py  __main__.py  cli.py
scripts/: add-context7-key.ps1  add-context7-mcp.ps1  add-tavily-mcp.ps1  new-project.ps1  rw-agent.bat  rw-agent.py  rw-agent.sh  setup.py  update-token-budget.ps1
tests/: __init__.py  test_approval_workflow.py  test_caching_basics.py  test_caching_integration.py  test_code_parser.py  test_git_skill.py  test_json_parsing.py  test_logging.py  test_new_tools_integration.py  test_output_manager.py  test_response_cleaning.py  test_subagents_new.py  test_temp_manager.py
tools/: MEMORY_TOOLS_README.md  __init__.py  extract_memories.py  global_qwen_compressed.md  mcp_server_caching.py  mcp_server_code_tools.py  memory_optimizer.py  memory_scorer.py  project_qwen_compressed.md  prompt_compressor.py  prompt_optimizer.py
