[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rapidwebs-agent"
version = "1.0.0"
description = "Cross-platform agentic CLI optimized for free-tier LLMs"
authors = [{name = "Steven", email = "steven@rapidwebs.enterprise"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.43",
    "httpx>=0.26.0",
    "pyyaml>=6.0.1",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.1.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.6.0",
    # Tier 1 code tools (bundled)
    "ruff>=0.5.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
]

[project.optional-dependencies]
# Tier 2 tools (user installs if needed)
sql-tools = ["sqlfluff>=3.0.0"]
shell-tools = []  # Note: shfmt is a Go binary, install separately

dev = [
    "pytest>=8.0.0",
]

[project.scripts]
rw-agent = "rapidwebs_agent.cli:main"
rw-agent-cache = "tools.mcp_server_caching:main"
rw-agent-code = "tools.mcp_server_code_tools:main"

# Explicit package selection for Hatch
[tool.hatch.build.targets.wheel]
packages = ["agent", "rapidwebs_agent", "tools"]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[tool.hatch.build]
skip-excluded-dirs = true
